<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.login.LoginFragment"
        android:id="@+id/loginFragment"
        android:layout_margin="30dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvMarvelComics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tilEmail"
            android:text="@string/marvelcomicsapp"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@color/black"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mtvMarvelComics"
            app:layout_constraintBottom_toTopOf="@+id/mbtLogin"
            app:layout_constraintVertical_chainStyle="packed"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_email"
                style="@style/EditText"
                android:layout_marginBottom="16dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:layout_constraintVertical_chainStyle="packed"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_password"
                style="@style/EditText"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/mbtRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sign_in"
            android:paddingVertical="16dp"
            style="@style/LoginButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/create_account"
            android:paddingVertical="16dp"
            style="@style/LoginButton"
            android:backgroundTint="@color/Gray200"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
